# ticketer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  app_state.rs  command.rs  lib.rs  main.rs
src/misc/: exit.rs
src/ticket/: application.rs  command.rs  domain.rs  infrastructure.rs  mod.rs
tests/: infrastructure_test.rs  integration_test.rs
