[package]
name = "ticketer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
crossterm = "0.29.0"
ratatui = "0.30.0"
rusqlite = { version = "0.39.0", features = ["chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v7"] }
